# hoffgui

./: .gitignore  CMakeLists.txt  README.md  TODO.md  vcpkg.json
.github/workflows/: cmake-build-all.yml  cmake-build-linux-all.yml  cmake-build-linux-debug.yml  cmake-build-packages.yml
cmake/: AppVersion.cmake  AppVersion.cpp.in  VERSION.txt.in
docs/: CHANGELOG.txt  CONTRIBUTING.md  README.txt
libs/imgui_markdown/: imgui_markdown.h
packaging/: DS_Store.scpt  MacOSXBundleInfo.plist.in  hoffgui.icon.rc  icon.icns  make-icon.sh
scripts/: build-linux-packages.sh  build-macos-packages.sh  build-win32-package.bat  build-x64-package.bat  build.bat  clean.bat  delete-ini-files.bat  gen-xcode.sh  gensln.bat  install.bat  install.sh  package.bat  package.sh
src/: AppVersion.h  CommandLineArgs.cpp  CommandLineArgs.h  main.cpp
src/Core/: Displays.cpp  Displays.h  Endian.h  FileSystem.cpp  FileSystem.h  FileSystemHelpers.cpp  FileSystemHelpers.h  Helpers.h  IniFile.cpp  IniFile.h  Log.cpp  Log.h  ProcessWrap.cpp  ProcessWrap.h  StringHelpers.cpp  StringHelpers.h  Window.cpp  Window.h  hp_assert.cpp  hp_assert.h
src/HoffGui/: HoffGui.cpp  HoffGui.h  MainMenu.cpp  MainMenu.h  Options.cpp  Options.h  RecentFiles.cpp  RecentFiles.h
src/HoffGui/Dialogues/: AboutPopup.cpp  AboutPopup.h  FileDialogue.cpp  FileDialogue.h
src/HoffGui/Windows/: ImGuiDemoWindow.cpp  ImGuiDemoWindow.h  ModWindow.cpp  ModWindow.h  OptionsWindow.cpp  OptionsWindow.h  OutputWindow.cpp  OutputWindow.h  WindowList.h
src/ImGuiWrap/: Fonts.cpp  Fonts.h  ImGuiHelpers.cpp  ImGuiHelpers.h  ImGuiWrap.cpp  ImGuiWrap.h
src/Mod/: ModFile.cpp  ModFile.h
src/Platform/: SystemInfo.cpp  SystemInfo.h
src/Utils/: Bitfield.h  Parse.cpp  Parse.h
src/imgui/: imconfig.h  imgui_demo.cpp  imgui_draw.cpp
src/imgui/backends/: imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
